----------
v4.0.3-git
----------

[jan] Fix importing of LDIF data (Bug #11972).


------
v4.0.2
------

[mjr] Avoid sending broken datetime values to ActiveSync.
[jan] Update Basque translation (Ibon Igartua <ibon.igartua@ehu.es>).
[jan] Update French translation (Laurent Foucher
      <laurent.foucher@iut-tlse3.fr>).
[jan] Mark Kolab folder as default when changing default address book
      preference.


------
v4.0.1
------

[jan] Add free-text country attributes and use them in default Kolab backend
      (Request #11692).
[gwr] Fix handling empty dates in the Kolab driver (Bug #11691).
[jan] Use encoded UIDs as IDs in Kolab driver.
[jan] Fix searching shares for duplicates.
[mjr] Fix calling decode_attribute hook when exporting to ActiveSync
      (kd@tu-cottbus.de, Bug #11678).
[jan] Update Slovak translation (Jozef Sudolský <jozef.sudolsky@elbia.sk>).


------
v4.0.0
------

[jan] Update Polish translation (Krzysztof Kozera <krzysztof113@o2.pl>).
[jan] Update Dutch translation (Arjen de Korte <arjen+horde@de-korte.org>).


---------
v4.0.0RC1
---------

[jan] Allow searching for 'emails' attributes (Bug #11185).
[jan] Fix LIKE matching of attributes in Kolab driver.
[mms] Convert turba minisearch block to the Horde AJAX framework.
[jan] Support 'emails' attribute in smartphone view (Bug #11544).
[jan] Attach share owner to all address book titles (Bug #11528).
[jan] Fix exporting from browse view (Bug #11526).
[jan] Return to the same page after running actions from the browse view.


-----------
v4.0.0beta3
-----------

[jan] Support importing contacts via API if using 'emails' attributes (Bug
      #8358).
[jan] Support 'emails' attribute with ActiveSync.
[jan] Fix marking contacts as deleted in the history if deleting shared address
      books (Bug #11480).
[jan] Set gender field values literally to 'male' or 'female'.
[jan] Drop preference which address books to display.
[gwr] Mark the initial default share as such with the Kolab backend.