@@ -40,6 +40,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/asl">ASL</license>
  <notes>
+* [jan] Fix emptying shared address books.
 * [jan] Fix importing of LDIF data (Bug #11972).
  </notes>
  <contents>
@@ -1555,6 +1556,7 @@
    <date>2013-01-10</date>
    <license uri="http://www.horde.org/licenses/asl">ASL</license>
    <notes>
+* [jan] Fix emptying shared address books.
 * [jan] Fix importing of LDIF data (Bug #11972).
    </notes>
   </release>
